# pysynphot_etc

./: README.rst  pyproject.toml  setup.py
.github/workflows/: ci_workflows.yml
pysynphot/: __init__.py  locations.py  observationmode.py  spectrum.py
pysynphot/test/: test_spectral_element.py
