[project]
name = "pysynphot"
version = "2.0.1"
description = "Python Synthetic Photometry Utilities"
license = "BSD-3-Clause"
authors = [ {name = 'Vicki Laidler'}, 
            {name = 'Pey Lian Lim'}, 
            {name = 'Matt Davis'}, 
            {name = 'Robert Jedrzejewski'}, 
            {name = 'Ivo Busko'}, 
            {name = 'Isaac Spitzer'}]
classifiers = [
        "Intended Audience :: Science/Research",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Topic :: Scientific/Engineering :: Astronomy",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]
requires-python = ">=3.6,<3.15"
dynamic = [
    "dependencies"]

[build-system]
requires = [
    "setuptools>=30.3.0",
    "wheel",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pysynphot"]
